# ROSE

./: README.md
klee/: CMakeLists.txt
klee/include/klee/Core/: Interpreter.h
klee/include/klee/Expr/: Expr.h
klee/include/klee/Module/: IntervalTree.h  OptionVarMap.h
klee/lib/Core/: CMakeLists.txt  ExecutionState.cpp  ExecutionState.h  Executor.cpp  Executor.h  PTree.cpp  PTree.h  Searcher.cpp  Searcher.h  SpecialFunctionHandler.cpp  UserSearcher.cpp
klee/lib/Solver/: Solver.cpp  Z3Solver.cpp
klee/runtime/POSIX/: klee_init_env.c
klee/tools/klee/: main.cpp
llm/: OVGraph.py  OVGraph_utils.py  analyzer.py  custom_logger.py  evaluator.py  llm_utils.py  renamer.py  repo_analyzer.py  repo_extractor.py  repo_utils.py  run_analyze.py  run_extract.py
llm/prompts/: feedback.txt  query-core-svs.txt  query-effects.txt  query-entry.txt  query-location.txt  query-options.txt
scripts/: build.sh
